# init-workshop

./: Cargo.toml  README.md
src/: game.rs  lib.rs  main.rs  server.rs  structs.rs
src/game/: player.rs
src/server/: payloads.rs
tests/: create_player.rs  create_player_usecase.rs
