[package]
name = "init-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
http-body-util = "0.1"
tower-http = { version = "0.5", features = ["trace"] }
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
