[package]
name = "init-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "3" }
poem-openapi = { version = "5" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
poem = { version = "3", features = ["test"]}
